force-app/main/default/objects/Engagement_Picklist_Display__mdt/Engagement_Picklist_Display__mdt.object-meta.xml
<!--
  @author       David Wood
  @description  Maps a (Field API Name, API Value) pair to a non-default display label.
                Q8 — lets admins maintain LWC pretty-label vs Apex/REST API-value
                divergence without code changes. Read by Tex's render paths.
-->
<CustomObject>
    <label>Engagement Picklist Display</label>
    <pluralLabel>Engagement Picklist Displays</pluralLabel>
</CustomObject>