force-app/main/default/objects/Engagement_Picklist_Display__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >@author David Wood. Kill switch. When false, render paths ignore this row and fall back to the API value.</description>
    <inlineHelpText
  >Uncheck to disable this mapping without deleting the row.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>