force-app/main/default/objects/Engagement_Picklist_Display__mdt/fields/API_Value__c.field-meta.xml
<CustomField>
    <fullName>API_Value__c</fullName>
    <description>@author David Wood. The stored picklist API value (e.g. "Page View"). Render paths look up rows by (Field_API_Name__c, API_Value__c) to swap in Display_Label__c.</description>
    <inlineHelpText>Stored API value of the picklist (e.g. Page View).</inlineHelpText>
    <label>API Value</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>