force-app/main/default/objects/Engagement_Picklist_Display__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>@author David Wood. UI-friendly label to render instead of API_Value__c (e.g. "Page" instead of "Page View"). Empty/null = use API_Value__c as-is.</description>
    <inlineHelpText>LWC-friendly label (e.g. Page) shown in place of the API value (Page View).</inlineHelpText>
    <label>Display Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>