force-app/main/default/objects/Engagement_Picklist_Display__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>@author David Wood. API name of the picklist field this row applies to (e.g. Engagement_Touch__c.Touch_Type__c). Together with API_Value__c forms the lookup key.</description>
    <inlineHelpText>Object.Field API name (e.g. Engagement_Touch__c.Touch_Type__c).</inlineHelpText>
    <label>Field API Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>